--- a/app/src/main/res/layout/activity_form_warehouse.xml
+++ b/app/src/main/res/layout/activity_form_warehouse.xml
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textCapSentences"
         android:paddingBottom="10dp"
         android:hint="Ex : Ban, Baut" />
 
@@ -50,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textCapSentences"
         android:paddingBottom="10dp"
         android:hint="Ex : Ban dalam corsa" />
 
@@ -68,7 +68,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textCapSentences"
         android:hint="Ex : 35000" />
 
     <TextView
@@ -85,7 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textCapWords"
         android:hint="Ex : 50" />
 
     <LinearLayout
