--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="background">#EEEEEE</color>
+    <color name="darker_gray">#a9a9a9</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="accent_apk">#7d86b3</color>
 </resources>
