--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,14 +10,15 @@
     <TextView
         android:id="@+id/register"
         android:layout_width="match_parent"
-        android:textSize="40dp"
-        android:fontFamily="sans-serif-condensed"
-        android:padding="20dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:gravity="center"
         android:layout_height="wrap_content"
-        android:text="Register" />
+        android:layout_below="@id/imageView"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:paddingBottom="20dp"
+        android:text="Register"
+        android:textColor="@color/black"
+        android:textSize="40dp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/etNamaReg"
@@ -55,20 +56,20 @@
 
     <EditText
         android:id="@+id/etPasswordReg"
-        android:background="@drawable/custom_input"
-        android:layout_below="@id/etUserReg"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginVertical="15dp"
+        android:layout_below="@id/etUserReg"
         android:layout_marginHorizontal="40dp"
-        android:ems="10"
-        android:textColor="@color/darker_gray"
-        android:textColorHint="@color/darker_gray"
-        android:inputType="textPassword"
+        android:layout_marginVertical="15dp"
+        android:background="@drawable/custom_input"
         android:drawableStart="@drawable/custom_ic_password"
         android:drawablePadding="10dp"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
         android:paddingStart="15dp"
-        android:hint="Password" />
+        android:textColor="@color/darker_gray"
+        android:textColorHint="@color/darker_gray" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -86,9 +87,41 @@
         android:layout_below="@id/spinner"
         android:background="@drawable/custom_button"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:textStyle="bold"
         android:layout_width="200dp"
         android:layout_height="50dp"
+        android:textAlignment="center"
         android:text="REGISTER" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="25dp"
+        app:srcCompat="@drawable/pict" />
+
+    <TextView
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView7"
+        android:paddingTop="15dp"
+        android:layout_below="@id/btnReg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/darker_gray"
+        android:text="Sudah punya akun? " />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:paddingTop="5dp"
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold"
+        android:clickable="true"
+        android:onClick="btnLogin"
+        android:layout_below="@id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/accent_apk"
+        android:text="@string/loginbtn" />
 
 </RelativeLayout>
