--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".LoginActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="25dp"
+        app:srcCompat="@drawable/pict2" />
+
+    <TextView
+        android:id="@+id/login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/imageView2"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:paddingBottom="20dp"
+        android:text="Login"
+        android:textColor="@color/black"
+        android:textSize="40dp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/etUserLog"
+        android:background="@drawable/custom_input"
+        android:layout_below="@id/login"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginVertical="15dp"
+        android:layout_marginHorizontal="40dp"
+        android:ems="10"
+        android:textColor="@color/darker_gray"
+        android:textColorHint="@color/darker_gray"
+        android:inputType="textPersonName"
+        android:drawableStart="@drawable/custom_ic_username"
+        android:drawablePadding="10dp"
+        android:paddingStart="15dp"
+        android:hint="Username" />
+
+    <EditText
+        android:id="@+id/etPassLog"
+        android:background="@drawable/custom_input"
+        android:layout_below="@id/etUserLog"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginVertical="15dp"
+        android:layout_marginHorizontal="40dp"
+        android:ems="10"
+        android:textColor="@color/darker_gray"
+        android:textColorHint="@color/darker_gray"
+        android:inputType="textPassword"
+        android:drawableStart="@drawable/custom_ic_password"
+        android:drawablePadding="10dp"
+        android:paddingStart="15dp"
+        android:hint="Password" />
+
+    <Button
+        android:id="@+id/btnLog"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/etPassLog"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/custom_button2"
+        android:text="LOGIN"
+        android:textAlignment="center"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/forgot"
+        android:paddingTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold"
+        android:clickable="true"
+        android:onClick="btnForgot"
+        android:layout_below="@id/btnLog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/accent_apk3"
+        android:text="@string/forgot" />
+
+
+</RelativeLayout>
