--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,15 +25,16 @@
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:text="Selamat Datang!"/>
+
             <TextView
-                android:layout_below="@id/text"
                 android:id="@+id/intNama"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:layout_below="@id/text"
+                android:text="Nama Kamu"
                 android:textColor="@color/white"
-                android:text="Nama Kamu"/>
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </RelativeLayout>
 
         <ImageView
@@ -41,6 +42,29 @@
             android:layout_width="match_parent"
             android:layout_height="275dp"
             app:srcCompat="@drawable/pict" />
+
+        <TextClock
+            android:id="@+id/txt_jam"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:format12Hour="hh:mm:ss"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:text="JAM" />
+
+        <TextView
+            android:id="@+id/txt_tgl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:paddingTop="5dp"
+            android:paddingBottom="25dp"
+            android:text="TANGGAL" />
 
         <GridLayout
             android:layout_width="match_parent"
@@ -68,7 +92,7 @@
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/pict" />
+                        android:src="@drawable/ic_profile" />
                     <TextView
                         android:layout_marginTop="12dp"
                         android:layout_width="wrap_content"
@@ -98,7 +122,7 @@
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/pict" />
+                        android:src="@drawable/ic_kerja" />
                     <TextView
                         android:layout_marginTop="12dp"
                         android:layout_width="wrap_content"
@@ -128,7 +152,7 @@
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/pict" />
+                        android:src="@drawable/ic_history" />
                     <TextView
                         android:layout_marginTop="12dp"
                         android:layout_width="wrap_content"
@@ -158,7 +182,7 @@
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/pict" />
+                        android:src="@drawable/ic_exit" />
                     <TextView
                         android:layout_marginTop="12dp"
                         android:layout_width="wrap_content"
