--- a/app/src/main/res/layout/activity_list_item.xml
+++ b/app/src/main/res/layout/activity_list_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:focusable="auto"
     android:orientation="vertical"
+    android:background="@color/background"
     tools:context=".ListItem">
 
     <TextView
@@ -14,6 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:text="DATA WAREHOUSE"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:textAlignment="center"
         android:textSize="25sp" />
 
@@ -29,20 +32,21 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/listViewWarehouse"
         android:layout_alignEnd="@id/listViewWarehouse"
+        android:layout_alignBottom="@id/listViewWarehouse"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:contentDescription="Tambah Data"
         android:focusable="auto"
-        android:foreground="@android:drawable/ic_input_add"
+        android:foreground="@drawable/ic_add_data"
         app:fabSize="normal" />
 
     <Button
         android:id="@+id/button_kembaliwarehouse"
         android:layout_width="match_parent"
+        android:background="@drawable/custom_button"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="10dp"
