--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -5,16 +5,18 @@
     android:orientation="vertical">
 
     <TextView
-            android:id="@+id/textView"
-            android:layout_margin="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ID BARANG"
-            android:textSize="10sp"
-            android:textStyle="bold"/>
+        android:id="@+id/textView"
+        android:layout_margin="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:text="ID BARANG"
+        android:textSize="10sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tvId"
+        android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="5dp"
         android:textSize="15sp"
@@ -22,30 +24,33 @@
         android:text="" />
 
     <TextView
-            android:id="@+id/textView2"
-            android:layout_margin="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="NAMA BARANG"
-            android:textSize="10sp"
-            android:textStyle="bold"/>
+        android:id="@+id/textView2"
+        android:layout_margin="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="NAMA BARANG"
+        android:textSize="10sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tvNama"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="5dp"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:layout_height="wrap_content"
         android:text="" />
 
     <TextView
-            android:id="@+id/textView3"
-            android:layout_margin="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="JENIS BARANG"
-            android:textSize="10sp"
-            android:textStyle="bold"/>
+        android:id="@+id/textView3"
+        android:layout_margin="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="JENIS BARANG"
+        android:textSize="10sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tvJenis"
@@ -53,33 +58,37 @@
         android:layout_marginHorizontal="5dp"
         android:textSize="15sp"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:text="" />
 
     <TextView
-            android:id="@+id/textView4"
-            android:layout_margin="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="HARGA BARANG"
-            android:textSize="10sp"
-            android:textStyle="bold"/>
+        android:id="@+id/textView4"
+        android:layout_margin="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="HARGA BARANG"
+        android:textSize="10sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tvHarga"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="5dp"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:layout_height="wrap_content"
         android:text="" />
 
     <TextView
-            android:id="@+id/textView5"
-            android:layout_margin="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="STOK BARANG"
-            android:textSize="10sp"
-            android:textStyle="bold"/>
+        android:id="@+id/textView5"
+        android:layout_margin="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="STOK BARANG"
+        android:textSize="10sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tvStok"
@@ -87,6 +96,7 @@
         android:layout_marginHorizontal="5dp"
         android:textSize="15sp"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:text="" />
 
     <LinearLayout
@@ -96,6 +106,7 @@
             android:layout_height="wrap_content">
             <Button
                 android:id="@+id/btnitemRubah"
+                android:background="@drawable/custom_button"
                 android:text="Rubah"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
@@ -103,6 +114,7 @@
                 android:layout_height="match_parent"/>
             <Button
                 android:id="@+id/btnitemHapus"
+                android:background="@drawable/custom_button"
                 android:text="Hapus"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
