--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,8 @@
             android:alignmentMode="alignMargins"
             android:columnOrderPreserved="false">
             <androidx.cardview.widget.CardView
+                android:clickable="true"
+                android:onClick="profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:cardBackgroundColor="@color/white"
@@ -107,6 +109,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:cardBackgroundColor="@color/white"
+                android:clickable="true"
+                android:onClick="bekerja"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
                 android:layout_margin="10dp"
@@ -137,6 +141,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:cardBackgroundColor="@color/white"
+                android:clickable="true"
+                android:onClick="history"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
                 android:layout_margin="10dp"
@@ -169,6 +175,8 @@
                 app:cardBackgroundColor="@color/white"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
+                android:clickable="true"
+                android:onClick="keluar"
                 android:layout_margin="10dp"
                 app:cardCornerRadius="15dp"
                 app:cardElevation="8dp">
