--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
+    android:orientation="vertical"
     tools:context=".RegisterActivity">
 
+    <ImageView
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:src="@drawable/pict" />
+
     <TextView
+        app:layout_constraintTop_toBottomOf="@id/imageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/register"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imageView"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
         android:paddingBottom="20dp"
@@ -22,45 +36,50 @@
 
     <EditText
         android:id="@+id/etNamaReg"
-        android:background="@drawable/custom_input"
-        android:layout_below="@id/register"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginVertical="15dp"
         android:layout_marginHorizontal="40dp"
-        android:ems="10"
-        android:textColor="@color/darker_gray"
-        android:textColorHint="@color/darker_gray"
-        android:inputType="textPersonName"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toBottomOf="@id/register"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/custom_input"
         android:drawableStart="@drawable/custom_ic_nama"
         android:drawablePadding="10dp"
+        android:ems="10"
+        android:hint="Nama"
+        android:inputType="textPersonName"
         android:paddingStart="15dp"
-        android:hint="Nama" />
+        android:textColor="@color/darker_gray"
+        android:textColorHint="@color/darker_gray" />
 
     <EditText
         android:id="@+id/etUserReg"
-        android:background="@drawable/custom_input"
-        android:layout_below="@id/etNamaReg"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginVertical="15dp"
         android:layout_marginHorizontal="40dp"
-        android:ems="10"
-        android:textColor="@color/darker_gray"
-        android:textColorHint="@color/darker_gray"
-        android:inputType="textPersonName"
+        android:layout_marginVertical="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toBottomOf="@id/etNamaReg"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/custom_input"
         android:drawableStart="@drawable/custom_ic_username"
         android:drawablePadding="10dp"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textPersonName"
         android:paddingStart="15dp"
-        android:hint="Username" />
+        android:textColor="@color/darker_gray"
+        android:textColorHint="@color/darker_gray" />
 
     <EditText
         android:id="@+id/etPasswordReg"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/etUserReg"
         android:layout_marginHorizontal="40dp"
-        android:layout_marginVertical="15dp"
+        android:layout_marginVertical="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toBottomOf="@id/etUserReg"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/custom_ic_password"
         android:drawablePadding="10dp"
@@ -73,55 +92,52 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:background="@drawable/custom_spinner"
-        android:layout_below="@id/etPasswordReg"
         android:layout_marginHorizontal="40dp"
-        android:textAlignment="center"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="15dp"
-        android:layout_width="320dp"
-        android:layout_height="wrap_content" />
+        android:layout_marginVertical="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toBottomOf="@id/etPasswordReg"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/custom_spinner"
+        android:textAlignment="center" />
 
     <Button
+        android:layout_marginVertical="20dp"
         android:id="@+id/btnReg"
-        android:layout_below="@id/spinner"
-        android:background="@drawable/custom_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:textAlignment="center"
-        android:text="REGISTER" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="25dp"
-        app:srcCompat="@drawable/pict" />
-
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView7"
-        android:paddingTop="15dp"
-        android:layout_below="@id/btnReg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/darker_gray"
-        android:text="Sudah punya akun? " />
+        app:layout_constraintTop_toBottomOf="@id/spinner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/custom_button"
+        android:text="REGISTER"
+        android:textAlignment="center"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/btnReg"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingTop="15dp"
+        android:text="Sudah punya akun? "
+        android:textColor="@color/darker_gray" />
 
     <TextView
         android:id="@+id/textView8"
-        android:paddingTop="5dp"
-        android:layout_centerHorizontal="true"
-        android:textStyle="bold"
-        android:clickable="true"
-        android:onClick="btnLogin"
-        android:layout_below="@id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/textView7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:clickable="true"
+        android:onClick="btnLogin"
+        android:paddingTop="5dp"
+        android:text="@string/loginbtn"
         android:textColor="@color/accent_apk"
-        android:text="@string/loginbtn" />
+        android:textStyle="bold" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
