--- a/app/src/main/res/layout/activity_form_warehouse.xml
+++ b/app/src/main/res/layout/activity_form_warehouse.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical"
-    tools:context=".FormWarehouse">
+    tools:context=".warehouse.FormWarehouse">
 
     <TextView
         android:id="@+id/textView"
