--- a/app/src/main/res/layout/activity_list_item.xml
+++ b/app/src/main/res/layout/activity_list_item.xml
@@ -7,7 +7,7 @@
     android:focusable="auto"
     android:orientation="vertical"
     android:background="@color/background"
-    tools:context=".ListItem">
+    tools:context=".warehouse.ListItem">
 
     <TextView
         android:id="@+id/textView6"
@@ -53,5 +53,5 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:text="KEMBALI" />
+        android:text="KELUAR" />
 </RelativeLayout>
