--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginTop="25dp"
-        app:srcCompat="@drawable/pict2" />
+        app:srcCompat="@drawable/pict" />
 
     <TextView
         android:id="@+id/login"
@@ -68,7 +68,7 @@
         android:layout_below="@id/etPassLog"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:background="@drawable/custom_button2"
+        android:background="@drawable/custom_button"
         android:text="LOGIN"
         android:textAlignment="center"
         android:textStyle="bold" />
@@ -83,7 +83,7 @@
         android:layout_below="@id/btnLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/accent_apk3"
+        android:textColor="@color/accent_apk"
         android:text="@string/forgot" />
 
 
