--- a/app/src/main/res/layout/activity_teknisi_work.xml
+++ b/app/src/main/res/layout/activity_teknisi_work.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".TeknisiWorkActivity">
+    tools:context=".teknisi.TeknisiWorkActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
