--- a/app/src/main/res/layout/fragment_child_cust_item.xml
+++ b/app/src/main/res/layout/fragment_child_cust_item.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChildCustItemFragment">
+    tools:context=".teknisi.ChildCustItemFragment">
 
     <ListView
         android:layout_marginTop="10dp"
