--- a/app/src/main/res/layout/fragment_cust_item.xml
+++ b/app/src/main/res/layout/fragment_cust_item.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/background"
-    tools:context=".CustItemFragment">
+    tools:context=".teknisi.CustItemFragment">
 
     <TextView
         android:layout_marginLeft="20dp"
