--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical"
-    tools:context=".RegisterActivity">
+    tools:context=".koneksi.RegisterActivity">
 
     <ImageView
         android:layout_marginTop="20dp"
@@ -115,29 +115,5 @@
         android:textAlignment="center"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/btnReg"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingTop="15dp"
-        android:text="Sudah punya akun? "
-        android:textColor="@color/darker_gray" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/textView7"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:clickable="true"
-        android:onClick="btnLogin"
-        android:paddingTop="5dp"
-        android:text="@string/loginbtn"
-        android:textColor="@color/accent_apk"
-        android:textStyle="bold" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
