--- a/app/src/main/res/layout/fragment_child_show_cust_item.xml
+++ b/app/src/main/res/layout/fragment_child_show_cust_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/refreshshowchild"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".teknisi.ChildShowCustItemFragment">
@@ -25,4 +26,4 @@
             android:textStyle="bold"
             android:textColor="@color/black"/>
     </RelativeLayout>
-</FrameLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
